--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 
 	</body>
 	<script>
-        var password = "CHANGE ME";
+        var password = "visualrhetoric";
 
         var div = document.createElement("div");
         div.style.backgroundColor = "#ffffff";
