--- a/references.html
+++ b/references.html
@@ -42,7 +42,7 @@
 
 									<h1>References</h1>
 								</header>
-								<iframe src="references2023.pdf" align="center" width="800" height="800"></iframe>
+								<iframe src="References2023.pdf" align="center" width="800" height="800"></iframe>
 								
 							</section>
 
