--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Home</a></li>
-							<li><a href="part-1.html">Part One</a></li>
-							<li><a href="part-2.html">Part Two</a></li>
+							<li><a href="part-1.html">Part I</a></li>
+							<li><a href="part-2.html">Part II</a></li>
 							<li><a href="conclusion.html">Conclusion</a></li>
 							<li><a href="references.html">References</a></li>
 						</ul>
